fix server style