@@ -8,7 +8,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import jakarta.annotation.PostConstruct;
 
@@ -294,6 +293,7 @@ public class SharedQueueManagementService {
      * @return the page of build jobs
      */
     public Page<BuildJob> getFilteredFinishedBuildJobs(FinishedBuildJobPageableSearchDTO search, Long courseId) {
+        final Page<BuildJob> ignored = buildJobRepository.findAll(PageUtil.createDefaultPageRequest(search, PageUtil.ColumnMapping.BUILD_JOB));
         final Page<BuildJob> page = buildJobRepository.findAllByFilterCriteria(search.getBuildStatus(), search.getBuildAgentAddress(), search.getStartDate(), search.getEndDate(),
                 search.getSearchTerm(), courseId, PageUtil.createDefaultPageRequest(search, PageUtil.ColumnMapping.BUILD_JOB));
         List<BuildJob> filteredBuildJobs = page.get().filter(buildJob -> {
@@ -304,7 +304,7 @@ public class SharedQueueManagementService {
             else {
                 return buildDuration.toSeconds() >= search.getBuildDurationLower();
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         return new PageImpl<>(filteredBuildJobs, page.getPageable(), filteredBuildJobs.size());
     }
